tests/negative/path_traversal_absolute_windows.uzpp
// XATOLIK_KUTILMOQDA: path_traversal: Windows disk harfi
ulash "C:/Windows/System32/cmd.exe"
butun asosiy() { qaytarish 0; }
